# smarthouse

./: .gitignore  CMakeLists.txt  SmartHouseCLI.service  UnixInstall.sh  WindowsInstall.cmd  conanfile.txt  install.cmd  install.sh  readme.md  smarthouse.service  startupServer.py  unix-install.sh  windows-install.cmd
db/: devices.json
include/Interface/: Container.h  Router.h
include/Interface/Recource/Factory/: Factory.h  IFactory.h
include/Interface/Resource/: AbstractResource.h  DeviceResource.h  ResourceNotFound.h  abstract_resource.h  device_resource.h
include/Interface/Resource/Factory/: AbstractFactory.h  DeviceFactory.h  Factory.h  device_factory.h
include/server/db/: abstract_db_service.h  db_service.h  device.h  device_db_service.h  logger_db_service.h
include/server/interface/: container.h  router.h
include/server/resource/: abstract_resource.h  device_resource.h  logger_resource.h  resource_not_found.h  root_resource.h
include/server/resource/factory/: abstract_factory.h  device_factory.h  device_resource_factory.h  factory.h  logger_resource_factory.h  resource_factory.h  root_resource_factory.h
include/server/resource/utils/: exception.h  json_builder.h  json_error_builder.h
linux/: UnixInstall.sh
src/: CMakeLists.txt  ServerUI.h  main.cpp
src/server/: CMakeLists.txt  Factory.cpp  server.cpp  server.h
src/server/Resource/: AbstractResource.cpp  DeviceResource.cpp  ResourceNotFound.cpp  abstract_resource.cpp  device_resource.cpp  resource_not_found.cpp
src/server/Resource/Factory/: DeviceFactory.cpp  Factory.cpp  device_factory.cpp
src/server/db/: abstract_db_service.cpp  db_service.cpp  device_db_service.cpp
src/server/handlers/: CMakeLists.txt  Device.cpp  Devices.cpp  Factory.cpp  Ping.cpp  Ping.h
src/server/handlers/include/: Device.h  Devices.h  Ping.h
src/server/include/: Factory.h  server.h
src/server/interface/: Container.cpp  Router.cpp  container.cpp  router.cpp
src/server/resource/: abstract_resource.cpp  device_resource.cpp  logger_resource.cpp  resource_not_found.cpp  root_resource.cpp
src/server/resource/factory/: device_factory.cpp  factory.cpp
src/server/resource/utils/: exception.cpp  json_builder.cpp  json_error_builder.cpp
